[package]
name = "Cryptify"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
confy = "0.4.0"
eframe = "0.15.0"
notify = "4.0.17"
plotters = "0.3.1"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
ureq = "2.2.0"